# corrosionwm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  shell.nix
.github/workflows/: rust.yml
src/: input.rs  main.rs  state.rs  udev.rs  winit.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  keybindings.rs  mod.rs  seat.rs  shell.rs  xdg_shell.rs
