[package]
name = "corrosionwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", features = [ "backend_winit", "wayland_frontend", "desktop", ] }
xcursor = "0.3.4"
image = "0.24.5"
renderdoc = "0.11.0"
bitflags = "1.3.2"
